<resources>
    <string name="app_name">F21COMP3025W4</string>
    <string name="enter_your_name">Enter your Name!</string>
    <string name="browser">Browser</string>
    <string name="sms_button">SMS Button</string>
    <string name="pass_info">Pass Info</string>
    <string name="pass_details">Pass Details</string>
    <string name="your_name">Your Name</string>
    <string name="app_name_new">Learning With Intents</string>
    <string name="title_activity_details">detailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="go_back_to_main">Go Back</string>
    <string name="back_to_main">Back to Main</string>
    <string name="load_url">Load URL</string>
    <string name="back_to_main_screen">Back to Main Screen</string>
    <string name="direct_to_url">Direct to URL</string>
    <string name="enter_url">Enter URL</string>
</resources>