<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/compass"
        android:background="@drawable/rectangle"
        />

    <EditText
        android:id="@+id/editNameTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:paddingTop="10dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:padding="5dp"



        />

    <Button
        android:id="@+id/passDetailsButton"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:text="@string/pass_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNameTest"

        />

    <Button
        android:id="@+id/infoButton"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/pass_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passDetailsButton" />

    <Button
        android:id="@+id/webButton"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/browser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoButton" />

    <Button
        android:id="@+id/smsButton"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sms_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webButton" />

</androidx.constraintlayout.widget.ConstraintLayout>